saved items component

--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -1,5 +1,5 @@
 .bg_svg {
-    background-image: url('/diamond.svg');
+    background-image: url('/mountains.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
